update the minio endpoint

--- a/.aws.env
+++ b/.aws.env
@@ -3,6 +3,6 @@ AWS_ACCESS_KEY_ID=FSDIOSFODNN7EXAMPLE
 AWS_SECRET_ACCESS_KEY=fsdlrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 AWS_BUCKET_NAME=fsd-bucket
 AWS_REGION=eu-west-2
-AWS_ENDPOINT_OVERRIDE=http://minio:9000
+AWS_ENDPOINT_OVERRIDE=http://host.docker.internal:9442
 MINIO_ROOT_USER=FSDIOSFODNN7EXAMPLE
 MINIO_ROOT_PASSWORD=fsdlrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
