add signature version env variable

--- a/.aws.env
+++ b/.aws.env
@@ -4,5 +4,6 @@ AWS_SECRET_ACCESS_KEY=fsdlrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 AWS_BUCKET_NAME=fsd-bucket
 AWS_REGION=eu-west-2
 AWS_ENDPOINT_OVERRIDE=http://host.docker.internal:9442
+AWS_SIGNATURE_VERSION=v4
 MINIO_ROOT_USER=FSDIOSFODNN7EXAMPLE
 MINIO_ROOT_PASSWORD=fsdlrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
