--- a/.aws.env
+++ b/.aws.env
@@ -1,4 +1,4 @@
-# credentials for awslocal s3 & sqs
+# Credentials for awslocal s3 & sqs (!! Do not add or commit any external services credentials !!)
 AWS_ACCESS_KEY_ID=FSDIOSFODNN7EXAMPLE
 AWS_SECRET_ACCESS_KEY=fsdlrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 AWS_BUCKET_NAME=fsd-bucket
