FS-3283: Add cors rule to localstack s3

--- a/.awslocal.env
+++ b/.awslocal.env
@@ -5,5 +5,5 @@ AWS_BUCKET_NAME=fsd-bucket
 AWS_DEFAULT_REGION=eu-west-2
 AWS_SQS_QUEUE_NAME=fsd-queue
 AWS_REGION=eu-west-2
-AWS_ENDPOINT_OVERRIDE=http://localstack:4566
+AWS_ENDPOINT_OVERRIDE=http://host.docker.internal:4566
 AWS_SIGNATURE_VERSION=v4
