renamed queue variables

--- a/.awslocal.env
+++ b/.awslocal.env
@@ -1,11 +1,18 @@
 # Credentials for awslocal s3 & sqs (!! Do not add or commit any external services credentials !!)
+
+# aws variables
 AWS_ACCESS_KEY_ID=FSDIOSFODNN7EXAMPLE
 AWS_SECRET_ACCESS_KEY=fsdlrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 AWS_BUCKET_NAME=fsd-bucket
 AWS_DEFAULT_REGION=eu-west-2
-AWS_SQS_QUEUE_NAME=fsd-queue
-AWS_DLQ_QUEUE_NAME=fsd-dlq
-AWS_DLQ_MAX_RECIEVE_COUNT=3
 AWS_REGION=eu-west-2
 AWS_ENDPOINT_OVERRIDE=http://host.docker.internal:4566
 AWS_SIGNATURE_VERSION=v4
+
+# Import application queue variables
+AWS_SQS_IMPORT_APP_QUEUE_NAME=import-queue
+AWS_DLQ_IMPORT_APP_QUEUE_NAME=import-dlq
+AWS_DLQ_MAX_RECIEVE_COUNT=3
+AWS_SQS_IMPORT_APP_PRIMARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/import-queue
+AWS_SQS_IMPORT_APP_SECONDARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/import-queue-dlq
+
