--- a/.awslocal.env
+++ b/.awslocal.env
@@ -10,8 +10,8 @@ AWS_ENDPOINT_OVERRIDE=http://host.docker.internal:4566
 AWS_SIGNATURE_VERSION=v4
 
 # Import application queue variables
-AWS_SQS_IMPORT_APP_QUEUE_NAME=import-queue
-AWS_DLQ_IMPORT_APP_QUEUE_NAME=import-dlq
+AWS_SQS_IMPORT_APP_QUEUE_NAME=import-queue.fifo
+AWS_DLQ_IMPORT_APP_QUEUE_NAME=import-dlq.fifo
 AWS_DLQ_MAX_RECIEVE_COUNT=3
-AWS_SQS_IMPORT_APP_PRIMARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/import-queue
-AWS_SQS_IMPORT_APP_SECONDARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/import-queue-dlq
+AWS_SQS_IMPORT_APP_PRIMARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/import-queue.fifo
+AWS_SQS_IMPORT_APP_SECONDARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/import-queue-dlq.fifo
