--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,8 +111,10 @@ services:
     build:
       context: ../funding-service-design-frontend
       dockerfile: Dockerfile
+      args:
+        - USE_DEV_REQUIREMENTS=true
     volumes: ['../funding-service-design-frontend:/app']
-    command: ["sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --host 0.0.0.0 --port 8080"]
+    command: ["sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]
     depends_on:
       - application-store
       - fund-store
@@ -127,6 +129,7 @@ services:
       - FORMS_SERVICE_PRIVATE_HOST=http://form-runner:3009
       - AUTHENTICATOR_HOST=http://localhost:3004
       - ACCOUNT_STORE_API_HOST=http://account-store:8080
+      - FLASK_DEBUG=1
       - FLASK_ENV=development
       - REDIS_INSTANCE_URI=redis://redis-data:6379
     env_file: .awslocal.env
