--- a/.awslocal.env
+++ b/.awslocal.env
@@ -9,7 +9,7 @@ AWS_REGION=eu-west-2
 AWS_ENDPOINT_OVERRIDE=http://host.docker.internal:4566
 AWS_SIGNATURE_VERSION=v4
 
-AWS_NOTIFICATION_BUCKET_NAME=fsd-notification-bucket
+AWS_MSG_BUCKET_NAME=fsd-notification-bucket
 
 # Import application queue variables
 AWS_SQS_IMPORT_APP_QUEUE_NAME=import-queue.fifo
@@ -18,8 +18,9 @@ AWS_DLQ_MAX_RECIEVE_COUNT=3
 AWS_SQS_IMPORT_APP_PRIMARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/import-queue.fifo
 AWS_SQS_IMPORT_APP_SECONDARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/import-queue-dlq.fifo
 
+# Notification queue variables
 AWS_SQS_NOTIFICATION_APP_QUEUE_NAME=notif-queue.fifo
 AWS_DLQ_NOTIFICATION_APP_QUEUE_NAME=notif-dlq.fifo
 AWS_DLQ_NOTIFICATION_MAX_RECIEVE_COUNT=3
-AWS_SQS_NOTIFICATION_APP_PRIMARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/notification-queue.fifo
-AWS_SQS_NOTIFICATION_APP_SECONDARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/notification-dlq.fifo
+AWS_SQS_NOTIF_APP_PRIMARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/notif-queue.fifo
+AWS_SQS_NOTIF_APP_SECONDARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/notif-dlq.fifo
