--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
         - account-store
         - notification
         - redis-data
+      env_file: .awslocal.env
       environment:
         - REDIS_INSTANCE_URI=redis://redis-data:6379
         - ACCOUNT_STORE_API_HOST=http://account-store:8080
@@ -104,9 +105,12 @@ services:
       ports:
         - 3006:8080
         - 5686:5678
+      env_file: .awslocal.env
       environment:
-        # Set key in .env - see README
-        GOV_NOTIFY_API_KEY: ${GOV_NOTIFY_API_KEY:?err}
+        - GOV_NOTIFY_API_KEY=${GOV_NOTIFY_API_KEY:?err}
+        - FLASK_DEBUG=1
+        - FLASK_ENV=development
+        - AWS_MSG_BUCKET_NAME=fsd-notification-bucket
   frontend:
     build:
       context: ../funding-service-design-frontend
