--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,30 @@
 #
 airium==0.2.6
     # via -r requirements.in
+blinker==1.8.2
+    # via flask
+click==8.1.7
+    # via flask
 debugpy==1.8.2
     # via -r requirements.in
+flask==3.0.3
+    # via flask-wtf
+flask-wtf==1.2.1
+    # via -r requirements.in
+itsdangerous==2.2.0
+    # via
+    #   flask
+    #   flask-wtf
+jinja2==3.1.4
+    # via flask
+markupsafe==2.1.5
+    # via
+    #   jinja2
+    #   werkzeug
+    #   wtforms
 python-dotenv==1.0.1
     # via -r requirements.in
+werkzeug==3.0.3
+    # via flask
+wtforms==3.1.2
+    # via flask-wtf
