FS-4529 initial db (#1)
* initial db setup

* fix conditions

* formatting

* fomatting

* formatting

* formatting

* can add fund and round

* add a round to a fund

* view fund and round config

* view application config

* adding assessment config

* view assessment config

* WIP - generate form json from db objects

* tests using data model classes

* conditions working

* conditions working in integration tests

* generating form json works

* all questions working

* lists working

* pre-commit

* minor fixes

* Removing old hard coded data

* Making test pass, added TODO to fix at a later date with future tickets

* Sorting working based on index

* moving all the non-db stuff under self-serve

* comments, removing unused stuff

* readme

* latest migrations

--- a/.devcontainer/python-container/devcontainer.json
+++ b/.devcontainer/python-container/devcontainer.json
@@ -1,7 +1,8 @@
 {
     "name": "Python Container",
     "dockerComposeFile": [
-      "../../docker-compose.yml"
+      "../../docker-compose.yml",
+      "../../compose.override.yml"
     ],
     "service": "fsd-self-serve",
     "shutdownAction": "none",
@@ -12,7 +13,9 @@
                 "ms-python.python",
                 "ms-python.vscode-pylance",
                 "ms-python.debugpy",
-                "ms-python.black-formatter"
+                "ms-python.black-formatter",
+                "ms-python.isort",
+                "monosans.djlint"
             ]
         }
     }
