--- a/requirements.in
+++ b/requirements.in
@@ -1,4 +1,13 @@
 python-dotenv
-debugpy
 airium
 flask-wtf
+#-----------------------------------
+#   Database
+#-----------------------------------
+SQLAlchemy[mypy]>=2.0.12
+Flask-SQLAlchemy>=3.0.3
+Flask-Migrate
+sqlalchemy-utils>=0.41.1
+sqlalchemy_json
+psycopg2-binary
+marshmallow-sqlalchemy
