--- a/requirements.txt
+++ b/requirements.txt
@@ -6,29 +6,75 @@
 #
 airium==0.2.6
     # via -r requirements.in
+alembic==1.13.2
+    # via flask-migrate
 blinker==1.8.2
     # via flask
 click==8.1.7
     # via flask
-debugpy==1.8.2
-    # via -r requirements.in
 flask==3.0.3
-    # via flask-wtf
+    # via
+    #   flask-migrate
+    #   flask-sqlalchemy
+    #   flask-wtf
+flask-migrate==4.0.7
+    # via -r requirements.in
+flask-sqlalchemy==3.1.1
+    # via
+    #   -r requirements.in
+    #   flask-migrate
 flask-wtf==1.2.1
     # via -r requirements.in
+greenlet==3.0.3
+    # via sqlalchemy
 itsdangerous==2.2.0
     # via
     #   flask
     #   flask-wtf
 jinja2==3.1.4
     # via flask
+mako==1.3.5
+    # via alembic
 markupsafe==2.1.5
     # via
     #   jinja2
+    #   mako
     #   werkzeug
     #   wtforms
+marshmallow==3.21.3
+    # via marshmallow-sqlalchemy
+marshmallow-sqlalchemy==1.0.0
+    # via -r requirements.in
+mypy==1.10.1
+    # via sqlalchemy
+mypy-extensions==1.0.0
+    # via mypy
+packaging==24.1
+    # via marshmallow
+psycopg2-binary==2.9.9
+    # via -r requirements.in
 python-dotenv==1.0.1
     # via -r requirements.in
+sqlalchemy[mypy]==2.0.31
+    # via
+    #   -r requirements.in
+    #   alembic
+    #   flask-sqlalchemy
+    #   marshmallow-sqlalchemy
+    #   sqlalchemy
+    #   sqlalchemy-json
+    #   sqlalchemy-utils
+sqlalchemy-json==0.7.0
+    # via -r requirements.in
+sqlalchemy-utils==0.41.2
+    # via -r requirements.in
+tomli==2.0.1
+    # via mypy
+typing-extensions==4.12.2
+    # via
+    #   alembic
+    #   mypy
+    #   sqlalchemy
 werkzeug==3.0.3
     # via flask
 wtforms==3.1.2
