BAU renaming to FAB (#2)
* BAU renaming to FAB

* rename default db url

--- a/.devcontainer/python-container/devcontainer.json
+++ b/.devcontainer/python-container/devcontainer.json
@@ -4,9 +4,9 @@
       "../../docker-compose.yml",
       "../../compose.override.yml"
     ],
-    "service": "fsd-self-serve",
+    "service": "fab",
     "shutdownAction": "none",
-    "workspaceFolder": "/self-serve",
+    "workspaceFolder": "/fab",
     "customizations": {
         "vscode": {
             "extensions": [
