Removing ref to base image (#4)

--- a/requirements.in
+++ b/requirements.in
@@ -1,13 +1,56 @@
-python-dotenv
-airium
-flask-wtf
 #-----------------------------------
 #   Database
 #-----------------------------------
-SQLAlchemy[mypy]>=2.0.12
-Flask-SQLAlchemy>=3.0.3
-Flask-Migrate
-sqlalchemy-utils>=0.41.1
-sqlalchemy_json
-psycopg2-binary
-marshmallow-sqlalchemy
+
+SQLAlchemy[mypy]>=2.0.30
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.7
+sqlalchemy-utils==0.41.2
+sqlalchemy_json==0.7.0
+psycopg2-binary==2.9.9
+marshmallow-sqlalchemy==1.0.0
+
+#-----------------------------------
+#   Html
+#-----------------------------------
+airium==0.2.6
+
+#-----------------------------------
+#   Web
+#-----------------------------------
+requests==2.32.3
+
+#-----------------------------------
+#   Security
+#-----------------------------------
+flask-talisman==1.1.0
+
+#-----------------------------------
+#   Flask Version
+#-----------------------------------
+Flask==3.0.3
+
+#-----------------------------------
+#   Security
+#-----------------------------------
+flask-talisman==1.1.0
+
+#-----------------------------------
+#   Static Assets
+#-----------------------------------
+Flask-Assets==2.1.0
+Flask-Compress==1.15
+cssmin==0.2.0
+pyScss==1.4.0
+jsmin==3.0.1
+govuk-frontend-jinja==3.1.0
+
+#-----------------------------------
+#   i18n
+#-----------------------------------
+Flask-Babel>=2.0.0
+
+#-----------------------------------
+#   Forms
+#-----------------------------------
+Flask-WTF==1.2.1
