--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,4 +1,31 @@
+-r requirements.in
 
+#-----------------------------------
+#   Pytest
+#-----------------------------------
+
+pytest==8.2.2
+pytest-mock==3.14.0
+pytest-html>=3.2.0
+pytest-env==1.1.3
+
+#-----------------------------------
+#   Dev Utils
+#-----------------------------------
+invoke==2.2.0
+pre-commit==3.7.1
 debugpy
-pre-commit
+python-dotenv
+
+#-----------------------------------
+#   Code Quality
+#-----------------------------------
+flake8==7.0.0
+flake8-pyproject==1.2.3
+black==24.3.0
 djlint
+
+#-----------------------------------
+#   Other Dev Dependencies
+#-----------------------------------
+beautifulsoup4==4.12.3
