--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,14 +4,37 @@
 #
 #    pip-compile requirements-dev.in
 #
+airium==0.2.6
+    # via -r requirements.in
+alembic==1.13.2
+    # via flask-migrate
+babel==2.15.0
+    # via flask-babel
+beautifulsoup4==4.12.3
+    # via -r requirements-dev.in
+black==24.3.0
+    # via -r requirements-dev.in
+blinker==1.8.2
+    # via flask
+brotli==1.1.0
+    # via flask-compress
+certifi==2024.7.4
+    # via requests
 cfgv==3.4.0
     # via pre-commit
+charset-normalizer==3.3.2
+    # via requests
 click==8.1.7
-    # via djlint
+    # via
+    #   black
+    #   djlint
+    #   flask
 colorama==0.4.6
     # via djlint
 cssbeautifier==1.15.1
     # via djlint
+cssmin==0.2.0
+    # via -r requirements.in
 debugpy==1.8.2
     # via -r requirements-dev.in
 distlib==0.3.8
@@ -22,41 +45,194 @@ editorconfig==0.12.4
     # via
     #   cssbeautifier
     #   jsbeautifier
+exceptiongroup==1.2.2
+    # via pytest
 filelock==3.15.4
     # via virtualenv
+flake8==7.0.0
+    # via
+    #   -r requirements-dev.in
+    #   flake8-pyproject
+flake8-pyproject==1.2.3
+    # via -r requirements-dev.in
+flask==3.0.3
+    # via
+    #   -r requirements.in
+    #   flask-assets
+    #   flask-babel
+    #   flask-compress
+    #   flask-migrate
+    #   flask-sqlalchemy
+    #   flask-wtf
+flask-assets==2.1.0
+    # via -r requirements.in
+flask-babel==4.0.0
+    # via -r requirements.in
+flask-compress==1.15
+    # via -r requirements.in
+flask-migrate==4.0.7
+    # via -r requirements.in
+flask-sqlalchemy==3.1.1
+    # via
+    #   -r requirements.in
+    #   flask-migrate
+flask-talisman==1.1.0
+    # via -r requirements.in
+flask-wtf==1.2.1
+    # via -r requirements.in
+govuk-frontend-jinja==3.1.0
+    # via -r requirements.in
+greenlet==3.0.3
+    # via sqlalchemy
 html-tag-names==0.1.2
     # via djlint
 html-void-elements==0.1.0
     # via djlint
 identify==2.5.36
     # via pre-commit
+idna==3.7
+    # via requests
+iniconfig==2.0.0
+    # via pytest
+invoke==2.2.0
+    # via -r requirements-dev.in
+itsdangerous==2.2.0
+    # via
+    #   flask
+    #   flask-wtf
+jinja2==3.1.4
+    # via
+    #   flask
+    #   flask-babel
+    #   govuk-frontend-jinja
+    #   pytest-html
 jsbeautifier==1.15.1
     # via
     #   cssbeautifier
     #   djlint
+jsmin==3.0.1
+    # via -r requirements.in
 json5==0.9.25
     # via djlint
+mako==1.3.5
+    # via alembic
+markupsafe==2.1.5
+    # via
+    #   jinja2
+    #   mako
+    #   werkzeug
+    #   wtforms
+marshmallow==3.21.3
+    # via marshmallow-sqlalchemy
+marshmallow-sqlalchemy==1.0.0
+    # via -r requirements.in
+mccabe==0.7.0
+    # via flake8
+mypy==1.10.1
+    # via sqlalchemy
+mypy-extensions==1.0.0
+    # via
+    #   black
+    #   mypy
 nodeenv==1.9.1
     # via pre-commit
+packaging==24.1
+    # via
+    #   black
+    #   marshmallow
+    #   pytest
 pathspec==0.12.1
-    # via djlint
+    # via
+    #   black
+    #   djlint
 platformdirs==4.2.2
-    # via virtualenv
+    # via
+    #   black
+    #   virtualenv
+pluggy==1.5.0
+    # via pytest
 pre-commit==3.7.1
     # via -r requirements-dev.in
+psycopg2-binary==2.9.9
+    # via -r requirements.in
+pycodestyle==2.11.1
+    # via flake8
+pyflakes==3.2.0
+    # via flake8
+pyscss==1.4.0
+    # via -r requirements.in
+pytest==8.2.2
+    # via
+    #   -r requirements-dev.in
+    #   pytest-env
+    #   pytest-html
+    #   pytest-metadata
+    #   pytest-mock
+pytest-env==1.1.3
+    # via -r requirements-dev.in
+pytest-html==4.1.1
+    # via -r requirements-dev.in
+pytest-metadata==3.1.1
+    # via pytest-html
+pytest-mock==3.14.0
+    # via -r requirements-dev.in
+python-dotenv==1.0.1
+    # via -r requirements-dev.in
+pytz==2024.1
+    # via flask-babel
 pyyaml==6.0.1
     # via
     #   djlint
     #   pre-commit
 regex==2023.12.25
     # via djlint
+requests==2.32.3
+    # via -r requirements.in
 six==1.16.0
     # via
     #   cssbeautifier
     #   jsbeautifier
+    #   pyscss
+soupsieve==2.5
+    # via beautifulsoup4
+sqlalchemy[mypy]==2.0.31
+    # via
+    #   -r requirements.in
+    #   alembic
+    #   flask-sqlalchemy
+    #   marshmallow-sqlalchemy
+    #   sqlalchemy
+    #   sqlalchemy-json
+    #   sqlalchemy-utils
+sqlalchemy-json==0.7.0
+    # via -r requirements.in
+sqlalchemy-utils==0.41.2
+    # via -r requirements.in
 tomli==2.0.1
-    # via djlint
+    # via
+    #   black
+    #   djlint
+    #   flake8-pyproject
+    #   mypy
+    #   pytest
+    #   pytest-env
 tqdm==4.66.4
     # via djlint
+typing-extensions==4.12.2
+    # via
+    #   alembic
+    #   black
+    #   mypy
+    #   sqlalchemy
+urllib3==2.2.2
+    # via requests
 virtualenv==20.26.3
     # via pre-commit
+webassets==2.0
+    # via flask-assets
+werkzeug==3.0.3
+    # via flask
+wtforms==3.1.2
+    # via flask-wtf
+zstandard==0.23.0
+    # via flask-compress
