--- a/requirements.txt
+++ b/requirements.txt
@@ -8,31 +8,62 @@ airium==0.2.6
     # via -r requirements.in
 alembic==1.13.2
     # via flask-migrate
+babel==2.15.0
+    # via flask-babel
 blinker==1.8.2
     # via flask
+brotli==1.1.0
+    # via flask-compress
+certifi==2024.7.4
+    # via requests
+charset-normalizer==3.3.2
+    # via requests
 click==8.1.7
     # via flask
+cssmin==0.2.0
+    # via -r requirements.in
 flask==3.0.3
     # via
+    #   -r requirements.in
+    #   flask-assets
+    #   flask-babel
+    #   flask-compress
     #   flask-migrate
     #   flask-sqlalchemy
     #   flask-wtf
+flask-assets==2.1.0
+    # via -r requirements.in
+flask-babel==4.0.0
+    # via -r requirements.in
+flask-compress==1.15
+    # via -r requirements.in
 flask-migrate==4.0.7
     # via -r requirements.in
 flask-sqlalchemy==3.1.1
     # via
     #   -r requirements.in
     #   flask-migrate
+flask-talisman==1.1.0
+    # via -r requirements.in
 flask-wtf==1.2.1
+    # via -r requirements.in
+govuk-frontend-jinja==3.1.0
     # via -r requirements.in
 greenlet==3.0.3
     # via sqlalchemy
+idna==3.7
+    # via requests
 itsdangerous==2.2.0
     # via
     #   flask
     #   flask-wtf
 jinja2==3.1.4
-    # via flask
+    # via
+    #   flask
+    #   flask-babel
+    #   govuk-frontend-jinja
+jsmin==3.0.1
+    # via -r requirements.in
 mako==1.3.5
     # via alembic
 markupsafe==2.1.5
@@ -53,8 +84,14 @@ packaging==24.1
     # via marshmallow
 psycopg2-binary==2.9.9
     # via -r requirements.in
-python-dotenv==1.0.1
+pyscss==1.4.0
     # via -r requirements.in
+pytz==2024.1
+    # via flask-babel
+requests==2.32.3
+    # via -r requirements.in
+six==1.16.0
+    # via pyscss
 sqlalchemy[mypy]==2.0.31
     # via
     #   -r requirements.in
@@ -75,7 +112,13 @@ typing-extensions==4.12.2
     #   alembic
     #   mypy
     #   sqlalchemy
+urllib3==2.2.2
+    # via requests
+webassets==2.0
+    # via flask-assets
 werkzeug==3.0.3
     # via flask
 wtforms==3.1.2
     # via flask-wtf
+zstandard==0.23.0
+    # via flask-compress
