Bau add utils (#6)
* BAU updating to use config class in utils

* remove warning

* BAU enabling db test fixtures

* review comments

--- a/requirements.in
+++ b/requirements.in
@@ -54,3 +54,7 @@ Flask-Babel>=2.0.0
 #   Forms
 #-----------------------------------
 Flask-WTF==1.2.1
+#-----------------------------------
+#   Utils
+#-----------------------------------
+funding-service-design-utils>=4.0.1
