--- a/requirements.txt
+++ b/requirements.txt
@@ -8,18 +8,40 @@ airium==0.2.6
     # via -r requirements.in
 alembic==1.13.2
     # via flask-migrate
+async-timeout==4.0.3
+    # via redis
 babel==2.15.0
     # via flask-babel
+beautifulsoup4==4.12.3
+    # via funding-service-design-utils
 blinker==1.8.2
-    # via flask
+    # via
+    #   flask
+    #   sentry-sdk
+boto3==1.34.144
+    # via flipper-client
+botocore==1.34.144
+    # via
+    #   boto3
+    #   s3transfer
 brotli==1.1.0
     # via flask-compress
+cachetools==5.4.0
+    # via flipper-client
 certifi==2024.7.4
-    # via requests
+    # via
+    #   requests
+    #   sentry-sdk
+cffi==1.16.0
+    # via cryptography
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
     # via flask
+commonmark==0.9.1
+    # via rich
+cryptography==42.0.8
+    # via pyjwt
 cssmin==0.2.0
     # via -r requirements.in
 flask==3.0.3
@@ -29,28 +51,44 @@ flask==3.0.3
     #   flask-babel
     #   flask-compress
     #   flask-migrate
+    #   flask-redis
     #   flask-sqlalchemy
     #   flask-wtf
+    #   funding-service-design-utils
+    #   sentry-sdk
 flask-assets==2.1.0
     # via -r requirements.in
 flask-babel==4.0.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   funding-service-design-utils
 flask-compress==1.15
     # via -r requirements.in
 flask-migrate==4.0.7
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   funding-service-design-utils
+flask-redis==0.4.0
+    # via funding-service-design-utils
 flask-sqlalchemy==3.1.1
     # via
     #   -r requirements.in
     #   flask-migrate
+    #   funding-service-design-utils
 flask-talisman==1.1.0
     # via -r requirements.in
 flask-wtf==1.2.1
+    # via -r requirements.in
+flipper-client==1.3.2
+    # via funding-service-design-utils
+funding-service-design-utils==4.0.1
     # via -r requirements.in
 govuk-frontend-jinja==3.1.0
     # via -r requirements.in
 greenlet==3.0.3
     # via sqlalchemy
+gunicorn==22.0.0
+    # via funding-service-design-utils
 idna==3.7
     # via requests
 itsdangerous==2.2.0
@@ -62,6 +100,10 @@ jinja2==3.1.4
     #   flask
     #   flask-babel
     #   govuk-frontend-jinja
+jmespath==1.0.1
+    # via
+    #   boto3
+    #   botocore
 jsmin==3.0.1
     # via -r requirements.in
 mako==1.3.5
@@ -70,6 +112,7 @@ markupsafe==2.1.5
     # via
     #   jinja2
     #   mako
+    #   sentry-sdk
     #   werkzeug
     #   wtforms
 marshmallow==3.21.3
@@ -81,17 +124,60 @@ mypy==1.10.1
 mypy-extensions==1.0.0
     # via mypy
 packaging==24.1
-    # via marshmallow
+    # via
+    #   gunicorn
+    #   marshmallow
 psycopg2-binary==2.9.9
     # via -r requirements.in
+pycparser==2.22
+    # via cffi
+pyee==6.0.0
+    # via flipper-client
+pygments==2.18.0
+    # via rich
+pyjwt[crypto]==2.8.0
+    # via
+    #   funding-service-design-utils
+    #   pyjwt
 pyscss==1.4.0
     # via -r requirements.in
+python-consul==1.1.0
+    # via flipper-client
+python-dateutil==2.9.0.post0
+    # via botocore
+python-dotenv==1.0.1
+    # via funding-service-design-utils
+python-json-logger==2.0.7
+    # via funding-service-design-utils
 pytz==2024.1
-    # via flask-babel
+    # via
+    #   flask-babel
+    #   funding-service-design-utils
+pyyaml==6.0.1
+    # via funding-service-design-utils
+redis==4.6.0
+    # via
+    #   flask-redis
+    #   flipper-client
 requests==2.32.3
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   funding-service-design-utils
+    #   python-consul
+rich==12.6.0
+    # via funding-service-design-utils
+s3transfer==0.10.2
+    # via boto3
+sentry-sdk[flask]==2.10.0
+    # via funding-service-design-utils
 six==1.16.0
-    # via pyscss
+    # via
+    #   pyscss
+    #   python-consul
+    #   python-dateutil
+    #   thrift
+soupsieve==2.5
+    # via beautifulsoup4
 sqlalchemy[mypy]==2.0.31
     # via
     #   -r requirements.in
@@ -104,7 +190,11 @@ sqlalchemy[mypy]==2.0.31
 sqlalchemy-json==0.7.0
     # via -r requirements.in
 sqlalchemy-utils==0.41.2
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   funding-service-design-utils
+thrift==0.20.0
+    # via flipper-client
 tomli==2.0.1
     # via mypy
 typing-extensions==4.12.2
@@ -113,7 +203,10 @@ typing-extensions==4.12.2
     #   mypy
     #   sqlalchemy
 urllib3==2.2.2
-    # via requests
+    # via
+    #   botocore
+    #   requests
+    #   sentry-sdk
 webassets==2.0
     # via flask-assets
 werkzeug==3.0.3
