Fs 4533 clone template (#5)
* BAU renaming to FAB

* adding is_template to list column and correctin data type for weighting

* Adding unique index on template page display_path

* fs-4533 clone component

* adding is_template to list column and correctin data type for weighting

* Adding unique index on template page display_path

* fs-4533 clone component

* fs-4533 clone page and components

* adding is_template to list column and correctin data type for weighting

* Adding unique index on template page display_path

* fs-4533 clone component

* fs-4533 clone page and components

* Bau add utils (#6)

* BAU updating to use config class in utils

* remove warning

* BAU enabling db test fixtures

* review comments

* adding is_template to list column and correctin data type for weighting

* Adding unique index on template page display_path

* fs-4533 clone component

* fs-4533 clone page and components

* Adding unique index on template page display_path

* Adding unique index on template page display_path

* fs-4533 clone page and components

* FS-4528: Build and Deploy to AWS Environments. (#7)

* Added new services and the code

* edited the manifest file

* edited

* edited the files

* edited the flag

* fix unit tests

* default db url

* added the latest image

---------

Co-authored-by: Sarah Sloan <sarah.sloan@levellingup.gov.uk>

* updating tests to use utils fixtures

* separate out unit test and ui test data

* adding is_template to list column and correctin data type for weighting

* Adding unique index on template page display_path

* fs-4533 clone component

* fs-4533 clone page and components

* Adding unique index on template page display_path

* Adding unique index on template page display_path

* fs-4533 clone page and components

* Adding unique index on template page display_path

* fs-4533 clone page and components

* Adding unique index on template pa

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     command: sleep infinity
     environment:
       - DATABASE_URL=postgresql://postgres:password@fab-db:5432/fab
+      - DATABASE_URL_UNIT_TEST=postgresql://postgres:password@fab-db:5432/fab_unit_test
 
 
   fab-db:
