--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,40 +1,51 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python Debugger: Current File",
+      "type": "debugpy",
+      "request": "launch",
+      "env": {
+        "FLASK_ENV": "development"
+      },
+      "program": "${file}",
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Python Debugger: Flask",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "flask",
+      "env": {
+        "FLASK_APP": "app.app.py",
+        "FLASK_DEBUG": "1"
+      },
+      "args": ["run", "--debug"],
+      "jinja": true,
+      "autoStartBrowser": false
+    },
+    {
+      "name": "Docker Runner FAB",
+      "type": "debugpy",
+      "env": {
+        "FLASK_APP": "app.app.py",
+        "FLASK_DEBUG": "1"
+      },
+      "request": "attach",
+      "connect": {
+        "host": "localhost",
+        "port": 5686
+      },
+      "pathMappings": [
         {
-            "name": "Python Debugger: Flask",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "flask",
-            "env": {
-              "FLASK_APP": "app.app.py",
-              "FLASK_DEBUG": "1"
-            },
-            "args": ["run", "--debug"],
-            "jinja": true,
-            "autoStartBrowser": false
-          },
-          {
-            "name": "Docker Runner FAB",
-            "type": "python",
-            "request": "attach",
-            "connect": {
-              "host": "localhost",
-              "port": 5686
-            },
-            "pathMappings": [
-              {
-                "localRoot": "${workspaceFolder:funding-service-design-fund-application-builder}",
-                "remoteRoot": "."
-              }
-            ],
-            "justMyCode": true
-          }
-        ]
-      }
-      
-    ]
+          "localRoot": "${workspaceFolder:funding-service-design-fund-application-builder}",
+          "remoteRoot": "."
+        }
+      ],
+      "justMyCode": true
+    }
+  ]
 }
