FS-4528: Build and deploy to AWS environment (#16)
* service name changed to fab

* rename the folder

* changed the image

* changed app's name

* edited the db name

* modify dockerfile

* added the new image

* added the procfile

* added the run file

* Add missing wsgi file (#22)

Co-authored-by: Kishan Patel <kishanpatel@Kishans-Air.broadband>

* application startup fixes

* application startup fixes

* application startup fixes

* application startup fixes

* added the variables in the manifest file

* added new image

* added a new image

* application startup fixes

* added a new image

---------

Co-authored-by: Kishan Patel <kishan.patel1@levellingup.gov.uk>
Co-authored-by: Kishan Patel <kishanpatel@Kishans-Air.broadband>
Co-authored-by: Nuwan Samarasinghe <nuwansamarasinghe100@gmail.com>

--- a/.github/workflows/copilot_deploy.yml
+++ b/.github/workflows/copilot_deploy.yml
@@ -63,7 +63,7 @@ jobs:
     with:
       version_to_build: sha-${{ github.sha }}
       owner: ${{ github.repository_owner }}
-      application: funding-service-design-self-serve
+      application: funding-service-design-fund-application-builder
       assets_required: false
 
   dev_deploy:
@@ -74,7 +74,7 @@ jobs:
       AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
     with:
       environment: dev
-      app_name: self-serve
+      app_name: fund-application-builder
       version: sha-${{ github.sha }}
 
   post_dev_deploy_tests:
@@ -90,7 +90,7 @@ jobs:
       run_performance_tests: ${{ inputs.run_performance_tests || true }}
       run_e2e_tests_assessment: ${{ inputs.run_e2e_tests_assessment || false }}
       run_e2e_tests_application: ${{ inputs.run_e2e_tests_application || false }}
-      app_name: self-serve
+      app_name: fund-application-builder
       environment: dev
 
   test_deploy:
@@ -101,7 +101,7 @@ jobs:
       AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
     with:
       environment: test
-      app_name: self-serve
+      app_name: fund-application-builder
       version: sha-${{ github.sha }}
 
   post_test_deploy_tests:
@@ -118,7 +118,7 @@ jobs:
       run_performance_tests: ${{ inputs.run_performance_tests || false }}
       run_e2e_tests_assessment: ${{ inputs.run_e2e_tests_assessment || false }}
       run_e2e_tests_application: ${{ inputs.run_e2e_tests_application || true }}
-      app_name: self-serve
+      app_name: fund-application-builder
       environment: test
 
   uat_deploy:
@@ -129,7 +129,7 @@ jobs:
       AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
     with:
       environment: uat
-      app_name: self-serve
+      app_name: fund-application-builder
       version: sha-${{ github.sha }}
 
   post_uat_deploy_tests:
@@ -146,7 +146,7 @@ jobs:
       run_performance_tests: ${{ inputs.run_performance_tests || false }}
       run_e2e_tests_assessment: ${{ inputs.run_e2e_tests_assessment || false }}
       run_e2e_tests_application: ${{ inputs.run_e2e_tests_application || true }}
-      app_name: self-serve
+      app_name: fund-application-builder
       environment: uat
 
   prod_deploy:
@@ -157,5 +157,5 @@ jobs:
       AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT }}
     with:
       environment: prod
-      app_name: self-serve
+      app_name: fund-application-builder
       version: sha-${{ github.sha }}
