--- a/copilot/fsd-fund-application-builder/manifest.yml
+++ b/copilot/fsd-fund-application-builder/manifest.yml
@@ -3,7 +3,7 @@
 #  https://aws.github.io/copilot-cli/docs/manifest/lb-web-service/
 
 # Your service name will be used in naming your resources like log groups, ECS services, etc.
-name: fsd-self-serve
+name: fsd-fund-application-builder
 type: Load Balanced Web Service
 
 # Distribute traffic to your service.
@@ -12,13 +12,13 @@ http:
   # To match all requests you can use the "/" path.
   path: '/'
   # You can specify a custom health check path. The default is "/".
-  healthcheck: '/healthcheck'
-  #alias: self-serve.${COPILOT_ENVIRONMENT_NAME}.access-funding.test.levellingup.gov.uk
+  #healthcheck: '/healthcheck'
+  #alias: fund-application-builder.${COPILOT_ENVIRONMENT_NAME}.access-funding.test.levellingup.gov.uk
 
 # Configuration for your containers and service.
 image:
   # Docker build arguments. For additional overrides: https://aws.github.io/copilot-cli/docs/manifest/lb-web-service/#image-location
-  location: ghcr.io/communitiesuk/funding-service-design-self-serve:sha-6cdb8baa686e0357be6b56730938bab7e433fd96
+  location: ghcr.io/communitiesuk/funding-service-design-fund-application-builder:sha-80b62bc90e84c96ec5cf8a4ca139b245391caca2
   # Port exposed through your container to route traffic to it.
   port: 8080
 
@@ -44,20 +44,17 @@ network:
 # Optional fields for more advanced use-cases.
 #
 # Pass environment variables as key value pairs.
-# variables:
-#   ACCOUNT_STORE_API_HOST: "http://fsd-account-store:8080"
-#   APPLICANT_self-serve_HOST: "https://self-serve.${COPILOT_ENVIRONMENT_NAME}.access-funding.test.levellingup.gov.uk"
-#   APPLICATION_STORE_API_HOST: "http://fsd-application-store:8080"
-#   AUTHENTICATOR_HOST: "https://authenticator.${COPILOT_ENVIRONMENT_NAME}.access-funding.test.levellingup.gov.uk"
-#   COOKIE_DOMAIN: ".test.levellingup.gov.uk"
-#   FLASK_ENV: ${COPILOT_ENVIRONMENT_NAME}
-#   FORMS_SERVICE_PUBLIC_HOST: "https://forms.${COPILOT_ENVIRONMENT_NAME}.access-funding.test.levellingup.gov.uk"
-#   FUND_STORE_API_HOST: "http://fsd-fund-store:8080"
-#   NOTIFICATION_SERVICE_HOST: http://fsd-notification:8080
-#   REDIS_INSTANCE_URI:
-#     from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-MagicLinksRedisInstanceURI
-#   SENTRY_DSN: "https://3c6d2fd1e3824aecb3826a7d640b29a9@o1432034.ingest.sentry.io/4503897449103360"
-#   MAINTENANCE_MODE: false
+variables:
+  ACCOUNT_STORE_API_HOST: "http://fsd-account-store:8080"
+  APPLICANT_fund-application-builder_HOST: "https://fund-application-builder.${COPILOT_ENVIRONMENT_NAME}.access-funding.test.levellingup.gov.uk"
+  APPLICATION_STORE_API_HOST: "http://fsd-application-store:8080"
+  AUTHENTICATOR_HOST: "https://authenticator.${COPILOT_ENVIRONMENT_NAME}.access-funding.test.levellingup.gov.uk"
+  COOKIE_DOMAIN: ".test.levellingup.gov.uk"
+  FLASK_ENV: ${COPILOT_ENVIRONMENT_NAME}
+  FORMS_SERVICE_PUBLIC_HOST: "https://forms.${COPILOT_ENVIRONMENT_NAME}.access-funding.test.levellingup.gov.uk"
+  FUND_STORE_API_HOST: "http://fsd-fund-store:8080"
+  NOTIFICATION_SERVICE_HOST: http://fsd-notification:8080
+  MAINTENANCE_MODE: false
 
 secrets:
   RSA256_PUBLIC_KEY_BASE64: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/RSA256_PUBLIC_KEY_BASE64
@@ -74,7 +71,7 @@ environments:
       spot: 2
 #   uat:
 #     http:
-#       alias: "self-serve.${COPILOT_ENVIRONMENT_NAME}.access-funding.test.levellingup.gov.uk"
+#       alias: "fund-application-builder.${COPILOT_ENVIRONMENT_NAME}.access-funding.test.levellingup.gov.uk"
 #     count:
 #       range: 2-4
 #       cooldown:
@@ -88,13 +85,13 @@ environments:
 #       response_time: 2s
 #   prod:
 #     http:
-#       alias: ["self-serve.prod.access-funding.levellingup.gov.uk", "self-serve.access-funding.levellingup.gov.uk"]
+#       alias: ["fund-application-builder.prod.access-funding.levellingup.gov.uk", "fund-application-builder.access-funding.levellingup.gov.uk"]
 #       hosted_zone: Z0686469NF3ZJTU9I02M
 #     variables:
 #       COOKIE_DOMAIN: ".levellingup.gov.uk"
 #       AUTHENTICATOR_HOST: "https://authenticator.access-funding.levellingup.gov.uk"
-#       APPLICANT_self-serve_HOST: "https://self-serve.access-funding.levellingup.gov.uk"
-#       ASSESSMENT_self-serve_HOST: "https://assessment.access-funding.levellingup.gov.uk"
+#       APPLICANT_fund-application-builder_HOST: "https://fund-application-builder.access-funding.levellingup.gov.uk"
+#       ASSESSMENT_fund-application-builder_HOST: "https://assessment.access-funding.levellingup.gov.uk"
 #       FORMS_SERVICE_PUBLIC_HOST: "https://forms.access-funding.levellingup.gov.uk"
 #       FLASK_ENV: production
 #     count:
