--- a/.awslocal.env
+++ b/.awslocal.env
@@ -15,12 +15,12 @@ AWS_MSG_BUCKET_NAME=fsd-notification-bucket
 AWS_SQS_IMPORT_APP_QUEUE_NAME=import-queue.fifo
 AWS_DLQ_IMPORT_APP_QUEUE_NAME=import-dlq.fifo
 AWS_DLQ_MAX_RECIEVE_COUNT=3
-AWS_SQS_IMPORT_APP_PRIMARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/import-queue.fifo
-AWS_SQS_IMPORT_APP_SECONDARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/import-queue-dlq.fifo
+AWS_SQS_IMPORT_APP_PRIMARY_QUEUE_URL=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/import-queue.fifo
+AWS_SQS_IMPORT_APP_SECONDARY_QUEUE_URL=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/import-queue-dlq.fifo
 
 # Notification queue variables
 AWS_SQS_NOTIFICATION_APP_QUEUE_NAME=notif-queue.fifo
 AWS_DLQ_NOTIFICATION_APP_QUEUE_NAME=notif-dlq.fifo
 AWS_DLQ_NOTIFICATION_MAX_RECIEVE_COUNT=3
-AWS_SQS_NOTIF_APP_PRIMARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/notif-queue.fifo
-AWS_SQS_NOTIF_APP_SECONDARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/notif-dlq.fifo
+AWS_SQS_NOTIF_APP_PRIMARY_QUEUE_URL=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/notif-queue.fifo
+AWS_SQS_NOTIF_APP_SECONDARY_QUEUE_URL=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/notif-dlq.fifo
