BAU: update localstack
Localstack on my machine (Mac OS Sonoma 14.6.1) is unable to run SQS.

It runs into the issue
`exception during call chain: Operation detection failed. Missing Action in request for query-protocol service ServiceModel(sqs)`

I haven't gotten to the bottom of exactly whats causing that but
it appears to be an issue thats been fixed by (many!) subsequent versions
of localstack.

Some configuration is simpler in newer versions of localstack and some
of the configuration has been deprecated.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 services:
   localstack:
-    image: localstack/localstack:2.2.0
+    image: localstack/localstack:3.7.2
     env_file: .awslocal.env
     environment:
       - SERVICES=s3,sqs
-      - DATA_DIR=/tmp/localstack/data
+      - PERSISTENCE=1
     ports:
       - 4566:4566 # LocalStack endpoint
       # - 4510-4559:4510-4559 # external services port range
     volumes:
       - ./docker-localstack:/etc/localstack/init/ready.d
-      - localstack:/tmp/localstack
+      - localstack:/var/lib/localstack
   fund-store:
     build:
       context: ../funding-service-design-fund-store
