--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,6 +136,7 @@ services:
       - FLASK_DEBUG=1
       - FLASK_ENV=development
       - REDIS_INSTANCE_URI=redis://redis-data:6379
+      - SECRET_KEY=dc_key
     env_file: .awslocal.env
     ports:
         - 3008:8080
