--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,6 @@
 {
     "name": "funding-service-design-docker-runner",
-    "postCreateCommand": [
-        "./scripts/reset-all-repos.sh -f",
-        "code .devcontainer/funding-service-design-docker-runner.code-workspace"
-    ],
+    "postCreateCommand": "./scripts/reset-all-repos.sh -f && code .devcontainer/funding-service-design-docker-runner.code-workspace",
     "customizations": {
         "vscode": {
             "settings": {
