Pull in post-award's services
Steps:
* Combine pre-award and post-award docker runner .env files
* Update post-award services to use .awslocal.env for aws env vars
* Rename `celery` to `data-store-celery`
* Dropped out post-award HTTPS since pre-award is still running over
  localhost/127.0.0.1 on HTTP. Everything needs to be converted at once
  because they're linked by authenticator.
* debugpy for data-store is running on a new port because of a
  conflict.
* Make venv script able to build assets for data-store
* Update authenticator port to 3004 to match this docker-compose's
* service

--- a/.awslocal.env
+++ b/.awslocal.env
@@ -1,5 +1,6 @@
 # Credentials for awslocal s3 & sqs (!! Do not add or commit any external services credentials !!)
 
+# <- Pre-award environment ->
 # aws variables
 AWS_ACCESS_KEY_ID=FSDIOSFODNN7EXAMPLE
 AWS_SECRET_ACCESS_KEY=fsdlrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
@@ -24,3 +25,11 @@ AWS_DLQ_NOTIFICATION_APP_QUEUE_NAME=notif-dlq.fifo
 AWS_DLQ_NOTIFICATION_MAX_RECIEVE_COUNT=3
 AWS_SQS_NOTIF_APP_PRIMARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/notif-queue.fifo
 AWS_SQS_NOTIF_APP_SECONDARY_QUEUE_URL=http://host.docker.internal:4566/000000000000/notif-dlq.fifo
+# <- Pre-award environment ->
+
+
+# <- Post-award environment ->
+AWS_S3_BUCKET_FAILED_FILES=data-store-failed-files-dev
+AWS_S3_BUCKET_SUCCESSFUL_FILES=data-store-successful-files-dev
+AWS_S3_BUCKET_FIND_DOWNLOAD_FILES=data-store-find-data
+# <- Post-award environment ->
