--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,28 @@
+# <- Pre-award environment ->
 # COPY TO .env then see README for details on how to obtain the values
 GOV_NOTIFY_API_KEY=
+# <- Pre-award environment ->
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_BUCKET_NAME=
-AWS_REGION=
 
-# AZURE_AD_CLIENT_ID=
-# AZURE_AD_CLIENT_SECRET=
-# AZURE_AD_TENANT_ID=
+# <- Post-award environment ->
+CELERY_AUTO_REFRESH=true
+NOTIFY_API_KEY=
+NOTIFY_FIND_API_KEY=
+# SENTRY_DSN_DATA_STORE=
+# SENTRY_DSN_DATA_FRONTEND=
+# SQLALCHEMY_ECHO=true
+ENABLE_TF_R6=true
+# <- Post-award environment ->
+
+
+
+# <- Shared environment ->
+FSD_UTILS_ENABLE_CONFIG_TABLE=false
+
+WERKZEUG_DEBUG_PIN=off
+AUTO_BUILD_ASSETS=true
+
+AZURE_AD_CLIENT_ID=
+AZURE_AD_CLIENT_SECRET=
+AZURE_AD_TENANT_ID=
+# <- Shared environment ->
